--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 							<li>This does not apply to police in police pursuits only.</li>
 						</ul></li>
 					<li>WARNING: Do not throw props at cars or attempt to release a stuck car using props. Go to the dealer and have it returned.</li>
-					<liThe speed limit is 35kmh on your HUD in city limits. The beach has no speed limit but you can still be pulled over for reckless driving.</li>
+					<li>The speed limit is 35kmh on your HUD in city limits. The beach has no speed limit but you can still be pulled over for reckless driving.</li>
 					<li>If you drive a car right up to a police operation (their lights on), you risk being fined or arrested.</li>
 					<li>Police cannot create checkpoints on the road and force players to stop UNLESS that player is doing something illegal at that moment.</li>
 					<li>Once you are removed from a vehicle by a cop, you cannot re-enter that same vehicle for 10 seconds.</li>
